--- a/page2.html
+++ b/page2.html
@@ -11,6 +11,8 @@
 
 <body style="background-color:lightgreen;">
 
+<p><a href="index.html">Go back to homepage</a></p>
+
 <h1>My interests</h1>
 
 <h1 style="background-color:DodgerBlue;">A hobby I have is playing on my Nintendo Switch.</h1>
