--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
 
 
 <head>
-
-
-<title>Page Title</title>
+  <link href="base.css" rel="stylesheet">
+  
+  <title>Jayant's website</title>
+  </head>
 
 
 <body style="background-color:lightblue;">
-
-
-
-<h1>My Webpage</h1>
-
-
+<div class="heading">
+<header><h1>My Webpage</h1></header>
+</div>
+<div class="left-bar">
+  <ul>
+    <li>
+      <a href="index.html">My home</a>
+    </li>
+    <li>
+      <a href="page2.html">My hobbies</a>
+    </li>
+  </ul>
+</div>
+<div class="main-section" >
    <p>I go to American High School in Fremont, California. I am in 11th grade.</p>
 
 
@@ -26,7 +35,7 @@
 
 <p><small> This is an image of the school I go to. </small><p>
 
-
+</div>
 <p> I take English, AP Physics 1,  AP US History, AP Computer Sceience Principles, Symphonic Band and AP Calculus BC. </p>
 
 
