--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <li>
       <a href="page2.html">My hobbies</a>
     </li>
+    <li>
+      <a href="aboutme.html">About me</a>
+    </li>
   </ul>
 </div>
 <div class="main-section" >
