--- a/aboutme.html
+++ b/aboutme.html
@@ -12,9 +12,9 @@
 		</div>
 		<div class="left-bar">
 			<ul>
-				<li><a href="index.html">My home</li>
-				<li><a href="page2.html">My hobbies></li>
-				<li><a href="aboutme.html">About me</li>
+				<li><a href="index.html">My home</a></li>
+				<li><a href="page2.html">My hobbies></a></li>
+				<li><a href="aboutme.html">About me</a></li>
 			</ul>
 		</div>
 		<div class="main-section">
