--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 		<div class="left-bar">
 			<ul>
 				<li><a href="index.html">My home</a></li>
-				<li><a href="page2.html">My hobbies></a></li>
+				<li><a href="page2.html">My hobbies</a></li>
 				<li><a href="aboutme.html">About me</a></li>
 			</ul>
 		</div>
