More data handling

--- a/books.html
+++ b/books.html
@@ -21,6 +21,7 @@
         </ul>
     </div>
     <div class="main-section">
+        Welcome to the table.
         <table width="100%" cellpadding="0" cellspacing="2" border="0" datasrc="#books">
             <thead>
                 <tr>
