--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <a href="page2.html">My hobbies</a>
             </li>
             <li>
+                <a href="books.html">Good books</a>
+            </li>
+            <li>
                 <a href="aboutme.html">About me</a>
             </li>
         </ul>
