--- a/books.html
+++ b/books.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -9,7 +9,7 @@
 <body>
     <div class="heading">
         <header>
-            <h1><a href=index.html title="Jayant's Website">Jayant's website</a></h1>
+            <h1><a href="index.html" title="Jayant's Website">Jayant's website</a></h1>
         </header>
     </div>
     <div class="left-bar">
@@ -22,6 +22,7 @@
     </div>
     <div class="main-section">
         Welcome to the table.
+        <!--
         <table width="100%" cellpadding="0" cellspacing="2" border="0" datasrc="#books">
             <thead>
                 <tr>
@@ -39,7 +40,7 @@
                     <td><span datafld="year"></span></td>
                 </tr>
             </tbody>
-        </table>
+        </table> -->
     </div>
 </body>
 
