--- a/books.html
+++ b/books.html
@@ -21,7 +21,7 @@
         </ul>
     </div>
     <div class="main-section">
-        Welcome to the table.
+        Welcome to the table. This is not working.
         <!--
         <table width="100%" cellpadding="0" cellspacing="2" border="0" datasrc="#books">
             <thead>
