--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body style="background-color:lightblue;">
     <div class="heading">
         <header>
-            <h1><a href="index.html" title="My website">My Website</a></h1>
+            <h1><a href="index.html" title="Jayant's website">Jayant's website</a></h1>
         </header>
     </div>
     <div class="left-bar">
