--- a/books.html
+++ b/books.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Good books/title>
-        <link href="base.css" rel="stylesheet">
+    <title>Good books</title>
+    <link href="base.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,8 +21,6 @@
         </ul>
     </div>
     <div class="main-section">
-        Welcome to the table. This is not working.
-        <!--
         <table width="100%" cellpadding="0" cellspacing="2" border="0" datasrc="#books">
             <thead>
                 <tr>
@@ -40,7 +38,7 @@
                     <td><span datafld="year"></span></td>
                 </tr>
             </tbody>
-        </table> -->
+        </table>
     </div>
 </body>
 
