--- a/teachers.html
+++ b/teachers.html
@@ -10,7 +10,7 @@
 <body style="background-color: darkorange;"></body>
 <div class="heading">
     <header>
-	    <h1><a href="index.html">Jayant's website</a></h1>
+        <h1><a href="index.html">Jayant's website</a></h1>
     </header>
 </div>
 <div class="left-bar">
@@ -32,13 +32,13 @@
 
     </header>
     <main>
-        <ul id="name"></ul>
+        <ul id="member"></ul>
         <ul id="image"></ul>
         <ul id="blurb"></ul>
         <pre id="output"></pre>
     </main>
 </div>
-	<!--script>
+<!--script>
 		document.addEventListener('DOMContentLoaded', () => {
     //fetch the data as soon as the page has loaded
     let url = "teachers.xml";
@@ -54,4 +54,5 @@
 		})
 	</script-->
 </body>
+
 </html>
