--- a/teachers.html
+++ b/teachers.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Page Title</title>
+    <title>My subjects</title>
     <link rel="stylesheet" href="base.css">
     <script defer rel="script" src="teachers.js"></script>
 </head>
@@ -27,8 +27,16 @@
     </ul>
 </div>
 <div class="main-section">
-
-    <p> I take English, AP Physics 1, AP US History, AP Computer Sceience Principles, Symphonic Band and AP Calculus BC. </p>
+    <h2>My subjects</h2>
+    <p> I take the following subjects at school in 11th grade:</p>
+    <ol>
+        <li>English</li>
+        <li>AP Physics 1</li>
+        <li>AP US History</li>
+        <li>AP Computer Science Principles</li>
+        <li>Symphonic Band</li>
+        <li>AP Calculus BC</li>
+    </ol>
 
     </header>
     <main>
