--- a/teachers.html
+++ b/teachers.html
@@ -41,9 +41,9 @@
     </header>
     <main>
         <div id="member" class="left "></div>
-        <div id="blurb" class="left "></div>
-        <div id="image" class="left "></div>
-        <pre id="output"></pre>
+        <div id="blurb"></div>
+        <div id="image"></div>
+        <pre id="output "></pre>
     </main>
 </div>
 <!--script>
