--- a/teachers.html
+++ b/teachers.html
@@ -24,6 +24,9 @@
         <li>
             <a href="teachers.html ">My teachers</a>
         </li>
+        <li>
+            <a href="aboutme.html">About me</a>
+        </li>
     </ul>
 </div>
 <div class="main-section ">
@@ -40,10 +43,23 @@
 
     </header>
     <main>
-        <div id="member" class="left "></div>
-        <div id="blurb"></div>
-        <div id="image"></div>
-        <pre id="output "></pre>
+        <h2>My teachers</h2>
+        <table>
+            <tr>
+                <th>Teacher Name</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td>
+                    <div id="member" class="left "></div>
+                </td>
+                <td>
+                    <div id="blurb"></div>
+                </td>
+            </tr>
+        </table>
+        <!-- div id="image"></div>
+        <pre id="output "></pre -->
     </main>
 </div>
 <!--script>
