--- a/aboutme.html
+++ b/aboutme.html
@@ -1,24 +1,33 @@
 <!doctype html>
 <html>
-	<head>
-		<title>About me</title>
-		<link href="base.css" rel="stylesheet">
-	</head>
-	<body>
-		<div class="heading">
-			<header>
-				<h1>Jayant's website</h1>
-			</header>
-		</div>
-		<div class="left-bar">
-			<ul>
-				<li><a href="index.html">My home</a></li>
-				<li><a href="page2.html">My hobbies</a></li>
-				<li><a href="aboutme.html">About me</a></li>
-			</ul>
-		</div>
-		<div class="main-section">
-			Place holder section for About me.
-		</div>
-	</body>
+
+<head>
+    <title>About me</title>
+    <link href="base.css" rel="stylesheet">
+</head>
+
+<body>
+    <div class="heading">
+        <header>
+            <h1>Jayant's website</h1>
+        </header>
+    </div>
+    <div class="left-bar">
+        <ul>
+            <li><a href="index.html">My home</a></li>
+            <li><a href="page2.html">My hobbies</a></li>
+            <li><a href="aboutme.html">About me</a></li>
+        </ul>
+    </div>
+    <div class="main-section">
+        <p> I take English, AP Physics 1, AP US History, AP Computer Sceience Principles, Symphonic Band and AP Calculus BC. </p>
+        <p> I have 4 members in my family.</p>
+        <p> I have a younger sister who goes to 8th grade at Thorrnton Junior High. </p>
+        <p> I use many websites for school like <a href="https://ahs-fusd-ca.schoolloop.com/">School Loop.</a> or <a href="https://canvas.instructure.com/">Canvas</a></p>
+        <p>My favorite color is <mark>blue</mark>.</p>
+        <p>My least favorite color is <mark>red</mark>.</p>
+
+    </div>
+</body>
+
 </html>
