--- a/teachers.html
+++ b/teachers.html
@@ -51,10 +51,10 @@
             </tr>
             <tr>
                 <td>
-                    <div id="member" class="left "></div>
+                    <ul id="member"></ul>
                 </td>
                 <td>
-                    <div id="blurb"></div>
+                    <ul id="blurb"></ul>
                 </td>
             </tr>
         </table>
