--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="index.html">My home</a></li>
             <li><a href="page2.html">My hobbies</a></li>
+            <li><a href="teachers.html">My teachers</a></li>
             <li><a href="aboutme.html">About me</a></li>
         </ul>
     </div>
