--- a/webpage1.html
+++ b/webpage1.html
@@ -30,23 +30,15 @@
 <p> I take English, AP Physics 1,  AP US History, AP Computer Sceience Principles, Symphonic Band and AP Calculus BC. </p>
 
 
-<p> I have 4 memebers in my family.</p>
+<p> I have 4 members in my family.</p>
 
-<p> I have a younger sister who goes to 8th grade at Thorrnton Junior High. </p>
-
-
+<p> I have a younger sister who goes to 8th grade at Thornton Junior High. </p>
 
 <p><i> I mostly play games like Pokemon Sword or Super Smash Bros Ultimate. </i><p>
 
-
 <p> I use many websites for school like <a href="https://ahs-fusd-ca.schoolloop.com/">School Loop.</a> or <a href="https://canvas.instructure.com/">Canvas</a><p>
 
-
-
-
-
 <p>My favorite color is <mark>blue</mark>.</p>
-
 
 <p>My least favorite color is <mark>red</mark>.</p>
 
@@ -54,11 +46,7 @@
 
 <h1>A button test</h1>
 
-
-
 <p>This is a test to see if buttons work:</p>
-
-
 
 <button type="button" onclick="myFunction()">Click to see one of my interests.</button>
 
