--- a/teachers.html
+++ b/teachers.html
@@ -51,7 +51,7 @@
             </tr>
             <tr>
                 <td>
-                    <div id="member" class="left "></div>
+                    <div id="member" class="left colored"></div>
                 </td>
                 <td>
                     <div id="blurb"></div>
