--- a/aboutme.html
+++ b/aboutme.html
@@ -9,15 +9,14 @@
 <body>
     <div class="heading">
         <header>
-            <h1>Jayant's website</h1>
+            <a href="index.html"><h1>Jayant's website</h1></a>
         </header>
     </div>
     <div class="left-bar">
         <ul>
-            <li><a href="index.html">My home</a></li>
             <li><a href="page2.html">My hobbies</a></li>
             <li><a href="teachers.html ">My teachers</a></li>
-            <li><a href="aboutme.html">About me</a></li>
+            <li>About me</a></li>
         </ul>
     </div>
     <div class="main-section">
