--- a/page2.html
+++ b/page2.html
@@ -15,10 +15,7 @@
     <div class="left-bar ">
         <ul>
             <li>
-                <a href="index.html ">My home</a>
-            </li>
-            <li>
-                <a href="page2.html ">My hobbies</a>
+                My hobbies
             </li>
             <li>
                 <a href="teachers.html ">My teachers</a>
