--- a/teachers.html
+++ b/teachers.html
@@ -16,13 +16,10 @@
 <div class="left-bar ">
     <ul>
         <li>
-            <a href="index.html ">My home</a>
-        </li>
-        <li>
             <a href="page2.html ">My hobbies</a>
         </li>
         <li>
-            <a href="teachers.html ">My teachers</a>
+            My teachers
         </li>
         <li>
             <a href="aboutme.html">About me</a>
