--- a/teachers.html
+++ b/teachers.html
@@ -51,7 +51,7 @@
                     <div id="member" class="left colored"></div>
                 </td>
                 <td>
-                    <div id="blurb"></div>
+                    <div id="text"></div>
                 </td>
             </tr>
         </table>
