--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
     <link href="base.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color:lightblue;">
     <div class="heading">
         <header>
             <a href="index.html"><h1>Jayant's website</h1></a>
