--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="base.css">
 </head>
 
-<body>
+<body style="background-color:lightblue;">
     <div class="heading ">
         <header>
             <h1><a href="index.html ">Jayant's website</a></h1>
