--- a/teachers.html
+++ b/teachers.html
@@ -7,8 +7,8 @@
     <script defer rel="script" src="teachers.js"></script>
 </head>
 
-<body></body>
-<div class="heading ">
+<body style="background-color:lightblue;">
+    <div class="heading ">
     <header>
         <h1><a href="index.html ">Jayant's website</a></h1>
     </header>
