--- a/teachers.html
+++ b/teachers.html
@@ -48,7 +48,7 @@
             </tr>
             <tr>
                 <td>
-                    <div id="member" class="left colored"></div>
+                    <div id="member" class="left"></div>
                 </td>
                 <td>
                     <div id="text"></div>
