--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
     <div class="main-section">
-        <p> I take English, AP Physics 1, AP US History, AP Computer Sceience Principles, Symphonic Band and AP Calculus BC. </p>
+        <p> I take English, AP Physics 1, AP US History, AP Computer Science Principles, Symphonic Band and AP Calculus BC. </p>
         <p> I have 4 members in my family.</p>
         <p> I have a younger sister who goes to 8th grade at Thornton Junior High. </p>
         <p> I use many websites for school like <a href="https://ahs-fusd-ca.schoolloop.com/">School Loop.</a> or <a href="https://canvas.instructure.com/">Canvas</a></p>
