--- a/teachers.html
+++ b/teachers.html
@@ -45,6 +45,7 @@
             <tr>
                 <th>Teacher Name</th>
                 <th>Description</th>
+                <th>Image</th>
             </tr>
             <tr>
                 <td>
@@ -52,6 +53,9 @@
                 </td>
                 <td>
                     <div id="text"></div>
+                </td>
+                <td>
+                    <div id="pic"></div>
                 </td>
             </tr>
         </table>
