--- a/teachers.html
+++ b/teachers.html
@@ -5,6 +5,8 @@
     <title>My subjects</title>
     <link rel="stylesheet" href="base.css">
     <script defer rel="script" src="teachers.js"></script>
+    <script defer rel="script" src="teachersimage.js"></script>
+
 </head>
 
 <body style="background-color:lightblue;">
@@ -55,7 +57,7 @@
                     <div id="text"></div>
                 </td>
                 <td>
-                    <div id="pic"></div>
+                    <div id="pics"></div>
                 </td>
             </tr>
         </table>
