--- a/teachers2.html
+++ b/teachers2.html
@@ -16,13 +16,10 @@
 <div class="left-bar ">
     <ul>
         <li>
-            <a href="index.html ">My home</a>
-        </li>
-        <li>
             <a href="page2.html ">My hobbies</a>
         </li>
         <li>
-            <a href="teachers.html ">My teachers</a>
+            My teachers
         </li>
         <li>
             <a href="aboutme.html">About me</a>
@@ -51,15 +48,13 @@
             </tr>
             <tr>
                 <td>
-                    <ul id="member"></ul>
+                    <span id="member"></span>
                 </td>
                 <td>
-                    <ul id="blurb"></ul>
+                    <span id="blurb"></span>
                 </td>
             </tr>
         </table>
-        <!-- div id="image"></div>
-        <pre id="output "></pre -->
     </main>
 </div>
 <!--script>
