--- a/teachers2.html
+++ b/teachers2.html
@@ -51,7 +51,7 @@
                     <span id="member"></span>
                 </td>
                 <td>
-                    <span id="blurb"></span>
+                    <span id="text"></span>
                 </td>
             </tr>
         </table>
