--- a/teachers2.html
+++ b/teachers2.html
@@ -41,20 +41,10 @@
     </header>
     <main>
         <h2>My teachers</h2>
-        <table>
-            <tr>
-                <th>Teacher Name</th>
-                <th>Description</th>
-            </tr>
-            <tr>
-                <td>
-                    <span id="member"></span>
-                </td>
-                <td>
-                    <span id="text"></span>
-                </td>
-            </tr>
-        </table>
+        <h3 class="left">Teacher Name</h3>
+        <h3>Description</h3>
+        <ul id="member" class="left"></ul>
+        <ul id="text"></ul>
     </main>
 </div>
 <!--script>
