--- a/teachers2.html
+++ b/teachers2.html
@@ -42,9 +42,9 @@
     <main>
         <h2>My teachers</h2>
         <h3 class="left">Teacher Name</h3>
-        <h3>Description</h3>
+        <h3 class="ovrflo">Description</h3>
         <ul id="member" class="left"></ul>
-        <ul id="text"></ul>
+        <ul id="text" class="ovrflo"></ul>
     </main>
 </div>
 <!--script>
