--- a/teachers2.html
+++ b/teachers2.html
@@ -41,10 +41,14 @@
     </header>
     <main>
         <h2>My teachers</h2>
-        <h3 class="left">Teacher Name</h3>
-        <h3 class="ovrflo">Description</h3>
-        <ul id="member" class="left"></ul>
-        <ul id="text" class="ovrflo"></ul>
+        <div>
+            <h3 class="left">Teacher Name</h3>
+            <h3 class="ovrflo">Description</h3>
+        </div>
+        <div>
+            <ul id="member" class="left"></ul>
+            <ul id="text" class="ovrflo"></ul>
+        </div>
     </main>
 </div>
 <!--script>
