--- a/teachers2.html
+++ b/teachers2.html
@@ -37,15 +37,14 @@
         <li>Symphonic Band</li>
         <li>AP Calculus BC</li>
     </ol>
-
-    </header>
+    <div class="clearing"></div>
     <main>
         <h2>My teachers</h2>
-        <div>
+        <div class="clearfix">
             <h3 class="left">Teacher Name</h3>
             <h3 class="ovrflo">Description</h3>
         </div>
-        <div>
+        <div class="clearfix">
             <ul id="member" class="left"></ul>
             <ul id="text" class="ovrflo"></ul>
         </div>
