--- a/teachers2.html
+++ b/teachers2.html
@@ -41,12 +41,12 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <h3 class="left-bar">Teacher Name</h3>
-            <h3 class="ovrflo">Description</h3>
+            <h3 class="left">Teacher Name</h3>
+            <h3 class="left">Description</h3>
         </div>
         <div class="clearfix">
-            <ul id="member" class="left-bar"></ul>
-            <ul id="text" class="ovrflo"></ul>
+            <ul id="member" class="left"></ul>
+            <ul id="text" class="left"></ul>
         </div>
     </main>
 </div>
