--- a/teachers2.html
+++ b/teachers2.html
@@ -41,8 +41,12 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <h3 class="left">Teacher Name</h3>
-            <h3 class="left">Description</h3>
+            <ul class="left">
+                <h3 class="libox">Teacher Name</h3>
+            </ul>
+            <ul class="left">
+                <h3 class="libox">Description</h3>
+            </ul>
         </div>
         <div class="clearfix">
             <ul id="member" class="left"></ul>
