--- a/teachers2.html
+++ b/teachers2.html
@@ -41,11 +41,11 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <ul class="left">
-                <h3 class="libox">Teacher Name</h3>
+            <ul class="left libox">
+                <h3>Teacher Name</h3>
             </ul>
-            <ul class="left">
-                <h3 class="libox">Description</h3>
+            <ul class="left libox">
+                <h3>Description</h3>
             </ul>
         </div>
         <div class="clearfix">
