--- a/teachers2.html
+++ b/teachers2.html
@@ -41,16 +41,16 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <ul class="left libox">
+            <ul class="left libox" style="border: none;">
                 <h3>Teacher Name</h3>
             </ul>
-            <ul class="left libox">
+            <ul class="left libox" style="border: none;">
                 <h3>Description</h3>
             </ul>
         </div>
-        <div class="clearfix">
-            <ul id="member" class="left"></ul>
-            <ul id="text" class="left"></ul>
+        <div class=" clearfix ">
+            <ul id="member " class="left "></ul>
+            <ul id="text " class="left "></ul>
         </div>
     </main>
 </div>
