--- a/teachers2.html
+++ b/teachers2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8" />
     <title>My subjects</title>
     <link rel="stylesheet" href="base.css">
     <script defer rel="script" src="teachers2.js"></script>
@@ -41,11 +42,11 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <ul class="left libox" style="border: none;">
-                <h3>Teacher Name</h3>
+            <ul class="left">
+                <h3 class="libox">Teacher Name</h3>
             </ul>
-            <ul class="left libox" style="border: none;">
-                <h3>Description</h3>
+            <ul class="left">
+                <h3 class="libox">Description</h3>
             </ul>
         </div>
         <div class=" clearfix ">
