--- a/teachers2.html
+++ b/teachers2.html
@@ -43,15 +43,15 @@
         <h2>My teachers</h2>
         <div class="clearfix">
             <ul class="left">
-                <h3 class="libox">Teacher Name</h3>
+                <h3>Teacher Name</h3>
             </ul>
             <ul class="left">
-                <h3 class="libox">Description</h3>
+                <h3>Description</h3>
             </ul>
         </div>
         <div class=" clearfix ">
-            <ul id="member " class="left "></ul>
-            <ul id="text " class="left "></ul>
+            <ul id="member" class="left"></ul>
+            <ul id="text" class="left"></ul>
         </div>
     </main>
 </div>
