--- a/teachers2.html
+++ b/teachers2.html
@@ -43,10 +43,10 @@
         <h2>My teachers</h2>
         <div class="clearfix">
             <ul class="left">
-                <h3>Teacher Name</h3>
+                <h3 class="libox">Teacher Name</h3>
             </ul>
             <ul class="left">
-                <h3>Description</h3>
+                <h3 class="libox">Description</h3>
             </ul>
         </div>
         <div class=" clearfix ">
