--- a/teachers2.html
+++ b/teachers2.html
@@ -50,8 +50,8 @@
             </ul>
         </div>
         <div class="clearfix">
-            <ul id="member" class="box-small left"></ul>
-            <ul id="text" class="box-large left"></ul>
+            <ul id="member" class="left"></ul>
+            <ul id="text" class="left"></ul>
         </div>
     </main>
 </div>
