Moved nomargin to correct element

--- a/teachers2.html
+++ b/teachers2.html
@@ -42,16 +42,16 @@
     <main>
         <h2>My teachers</h2>
         <div class="clearfix">
-            <ul class="box-small left">
+            <ul class="box-small left nomargin">
                 <h3 class="nobo">Teacher Name</h3>
             </ul>
-            <ul class="box-large left">
+            <ul class="box-large left nomargin">
                 <h3 class="nobo">Description</h3>
             </ul>
         </div>
         <div class="clearfix">
-            <ul id="member" class="left"></ul>
-            <ul id="text" class="left"></ul>
+            <ul id="member" class="left nomargin"></ul>
+            <ul id="text" class="left nomargin"></ul>
         </div>
     </main>
 </div>
