--- a/teachers3.html
+++ b/teachers3.html
@@ -25,6 +25,7 @@
             </li>
         </ul>
     </nav>
+    <div class="clearfix"></div>
     <main>
         <h2>My subjects</h2>
         <p> I take the following subjects at school in 11th grade:</p>
