Nav bar flipped and removed margins

--- a/teachers3.html
+++ b/teachers3.html
@@ -14,13 +14,13 @@
     </header>
     <nav>
         <ul class="clearfix">
-            <li class="left btn">
+            <li class="btn">
                 <a href="page2.html ">My hobbies</a>
             </li>
-            <li class="left btn">
+            <li class="active btn">
                 My teachers
             </li>
-            <li class="left btn">
+            <li class="btn">
                 <a href="aboutme.html">About me</a>
             </li>
         </ul>
