--- a/teachers3.html
+++ b/teachers3.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>My subjects</title>
-    <link rel="stylesheet" href="base3.css">
-    <script defer rel="script" src="teachers3.js"></script>
+    <link rel="stylesheet" href="css/base3.css">
+    <script defer rel="script" src="js/teachers3.js"></script>
 </head>
 
 <body>
