--- a/teachers3.html
+++ b/teachers3.html
@@ -47,10 +47,14 @@
                 <ul class="box-large left nomargin">
                     <h3 class="nobo">Description</h3>
                 </ul>
+                <ul class="box-medium left nomargin">
+                    <h3 class="nobo">Image</h3>
+                </ul>
             </section>
             <section class="clearfix">
                 <ul id="member" class="left nomargin"></ul>
                 <ul id="text" class="left nomargin"></ul>
+                <ul id="pix" class="left nomargin"></ul>
             </section>
         </section>
     </main>
