Managing header row

--- a/teachers3.html
+++ b/teachers3.html
@@ -41,13 +41,13 @@
         <section>
             <h2>My teachers</h2>
             <section class="clearfix">
-                <ul class="box-small left nomargin">
+                <ul class="box-small left nomargin headrow">
                     <h3 class="nobo">Teacher Name</h3>
                 </ul>
-                <ul class="box-large left nomargin">
+                <ul class="box-large left nomargin headrow">
                     <h3 class="nobo">Description</h3>
                 </ul>
-                <ul class="box-medium left nomargin">
+                <ul class="box-medium left nomargin headrow">
                     <h3 class="nobo">Image</h3>
                 </ul>
             </section>
