--- a/teachers3.html
+++ b/teachers3.html
@@ -47,7 +47,7 @@
                 <ul class="box-large left nomargin headrow">
                     <h3 class="nobo">Description</h3>
                 </ul>
-                <ul class="box-medium left nomargin headrow">
+                <ul class="box-small left nomargin headrow">
                     <h3 class="nobo">Image</h3>
                 </ul>
             </section>
